# Biodegradability_halflife_regression

./: CHANGELOG.md  LICENSE.md  README.md
inference/: README.md  SVR_interval_inference.py  SVR_interval_inference_test.sh  optional_rename_inference_model_assets.py  pyproject.toml  requirements_msc_toolbox.yaml
inference/models/: SVR_air_hsbd.json  SVR_air_hsbd_ad.npz  SVR_sediment_combined.joblib  SVR_sediment_combined.json  SVR_sediment_hsbd.joblib  SVR_sediment_hsbd.json  SVR_sediment_hsbd_ad.npz  SVR_sediment_vega.joblib  SVR_sediment_vega.json  SVR_sediment_vega_ad.npz  SVR_soil_combined.json  SVR_soil_combined_ad.npz  SVR_soil_hsbd.json  SVR_soil_vega.json  SVR_water_combined.json  SVR_water_hsbd.json  SVR_water_hsbd_ad.npz  SVR_water_vega.json  readme.md  t_half_meta_air_hsbd.csv  t_half_meta_sediment_hsbd.csv  t_half_meta_water_hsbd.csv  training_split_sediment_hsbd.csv  training_split_soil_hsbd.csv  training_split_soil_vega.csv
inference/src/: rdkit_tools.py
training_and_data_curation/: METHODS.md  README.md  SVR_interval_inference.py  SVR_interval_inference_test.sh  SVR_interval_model_and_analysis.py  SVR_interval_model_run_all_combos.sh  pyproject.toml
training_and_data_curation/0_1_data_clean_descr_calcs_db_build/: 0a1_1_model_data_extractor_hsbd_data.ipynb  0a1_2_optional_missing_hsbbd_data.ipynb  0a1_3_optional_verify_no_duplicates.ipynb  0a2_model_data_extractor_vega_data.ipynb  0b1_create_hsbd_database.ipynb  0b2_create_vega_database.ipynb  1a1_descr_hsbd_calc.ipynb  1a2_descr_calc_vega.ipynb  1a3_combined_hsbd_vega.ipynb  hsbd_interval_mapping.csv  (+4 more)
(+276 files in other folders)
