[project]
name = "BiodegRegInference"
version = "0.1.2"
description = "Minimal dependencies for SVR regression inference."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn>=1.8.0",
    "rdkit>=2025.9.1",     # earlier versions may work as well
    "tqdm>=4.67.1",
]
[tool.black]
line-length = 128
