[project]
name = "Biodeg_development"
version = "0.1.2"
description = "- dependencies for regression modeling - "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "Pillow",
    "pandas",
    "matplotlib",
    "scikit-learn>=1.8.0",
    "rdkit>=2025.9.1",        # earlier versions may work as well
    "notebook",
    "tqdm>=4.67.1",
    "ipywidgets>=8.1.7",
    "sqlalchemy>=2.0.44",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
    "matplotlib-venn>=1.1.2",
]
[tool.black]
line-length = 128
